# tridme-uic

./: CMakeLists.txt
examples/: CMakeLists.txt  basic.c  calc.c
include/: ui_core.h  ui_layout.h  ui_shaders.h  ui_styles.h  ui_utils.h  ui_widgets.h
src/: ui_core.c  ui_layout.c  ui_shaders.c  ui_widgets.c
